--- a/.github/workflows/dockerhub-description.yml
+++ b/.github/workflows/dockerhub-description.yml
@@ -24,11 +24,13 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
     - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
+      with:
+          fetch-depth: 2
     - name: Identify changed files
       id: changed-files
       run: |
         # Get the list of files changed in the latest commit(s)
-        git diff --name-only ${{ github.event.before }} ${{ github.sha }} | tee changed_files.txt
+        git diff --name-only HEAD~1 ${{ github.sha }} | tee changed_files.txt
         cat changed_files.txt
     - name: Set matrix data
       id: set-matrix
