--- a/.github/workflows/dockerhub-description.yml
+++ b/.github/workflows/dockerhub-description.yml
@@ -30,8 +30,11 @@ jobs:
       id: changed-files
       run: |
         # Get the list of files changed in the latest commit(s)
-        git diff --name-only HEAD~1 ${{ github.sha }} | tee changed_files.txt
-        matrix=$(jq -c . < .github/dockerhub-readmes.json)
+        changed_files=$(git diff --name-only HEAD~1 ${{ github.sha }} | tee changed_files.txt)
+        matrix=(jq --argfile changed <(printf '%s\n' "${changed_files[@]}") \
+            '.readmes |= map(select(.fname as $fname | $changed | index($fname)))' \
+            .github/dockerhub-readmes.json)
+        #matrix=$(jq -c . < .github/dockerhub-readmes.json)
         echo $matrix
     - name: Set matrix data
       id: set-matrix
