--- a/.github/workflows/dockerhub-description.yml
+++ b/.github/workflows/dockerhub-description.yml
@@ -31,13 +31,25 @@ jobs:
       run: |
         # Get the list of files changed in the latest commit(s)
         changed_files=$(git diff --name-only HEAD~1 ${{ github.sha }} | tee changed_files.txt)
-        echo $changed_files
+        echo "Changed files:"
         cat changed_files.txt
-        matrix=(jq --argfile changed <(printf '%s\n' "${changed_files[@]}") \
+    
+        # Check if there are any changed files
+        if [ -s changed_files.txt ]; then
+          # If there are changed files, filter the JSON using jq
+          matrix=$(jq --argfile changed <(printf '%s\n' "${changed_files[@]}") \
             '.readmes |= map(select(.fname as $fname | $changed | index($fname)))' \
             .github/dockerhub-readmes.json)
-        #matrix=$(jq -c . < .github/dockerhub-readmes.json)
+        else
+          # If no files were changed, set an empty JSON array as the matrix
+          matrix='{"readmes": []}'
+          echo "No matching files found, empty JSON created."
+        fi
+    
+        echo "Filtered matrix:"
         echo $matrix
+        echo "matrix=$matrix" >> $GITHUB_OUTPUT
+
     - name: Set matrix data
       id: set-matrix
       run: echo "matrix=$(jq -c . < .github/dockerhub-readmes.json)" >> $GITHUB_OUTPUT
