--- a/.github/workflows/dockerhub-description.yml
+++ b/.github/workflows/dockerhub-description.yml
@@ -30,7 +30,7 @@ jobs:
       id: changed-files
       run: |
         # Get the list of files changed in the latest commit(s)
-        changed_files=$(git diff --name-only HEAD~1 ${{ github.sha }} | tee changed_files.txt)
+        changed_files=$(git diff --name-only HEAD~1 ${{ github.sha }} | jq -R . | jq -s .)
         echo "Changed files:"
         cat changed_files.txt
     
