--- a/.github/workflows/dockerhub-description.yml
+++ b/.github/workflows/dockerhub-description.yml
@@ -26,8 +26,8 @@ jobs:
     - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
       with:
           fetch-depth: 2
-    - name: Identify changed files
-      id: changed-files
+    - name: Set Matrix data
+      id: set-matrix
       run: |
         # Get the list of files changed in the latest commit(s)
         changed_files=$(git diff --name-only HEAD~1 ${{ github.sha }} | sed 's|^|./|' | jq -R . | jq -s .)
@@ -39,9 +39,7 @@ jobs:
           .github/dockerhub-readmes.json)
         echo "Filtered matrix:"
         echo $matrix
-    - name: Set matrix data
-      id: set-matrix
-      run: echo "matrix=$matrix" >> $GITHUB_OUTPUT
+        echo "matrix=$matrix" >> $GITHUB_OUTPUT
   publish-dockerhub-description:
     runs-on: ${{ github.repository_owner == 'intel' && 'intel-ubuntu-latest' || 'ubuntu-latest' }}
     needs: setup-matrix
