--- a/.github/workflows/dockerhub-description.yml
+++ b/.github/workflows/dockerhub-description.yml
@@ -23,6 +23,10 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
+    - name: Harden Runner
+      uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
+      with:
+        egress-policy: audit
     - uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
       with:
           fetch-depth: 2
@@ -37,13 +41,11 @@ jobs:
         matrix=$(jq -c --argjson changed "$changed_files" \
           '.readmes |= map(select(.fname as $fname | any($changed[]; . == $fname)))' \
           .github/dockerhub-readmes.json)
-        echo "Filtered matrix:"
-        echo $matrix
         echo "matrix=$matrix" >> $GITHUB_OUTPUT
   publish-dockerhub-description:
     runs-on: ${{ github.repository_owner == 'intel' && 'intel-ubuntu-latest' || 'ubuntu-latest' }}
     needs: setup-matrix
-    if: ${{ needs.setup-matrix.outputs.matrix != '{"readmes":[]}' }}
+    if: ${{ fromJson(needs.setup-matrix.outputs.matrix).readmes != null && fromJson(needs.setup-matrix.outputs.matrix).readmes != [] }}
     strategy:
       matrix: ${{ fromJson(needs.setup-matrix.outputs.matrix) }}
       fail-fast: false
