--- a/.github/workflows/dockerhub-description.yml
+++ b/.github/workflows/dockerhub-description.yml
@@ -45,7 +45,7 @@ jobs:
   publish-dockerhub-description:
     runs-on: ${{ github.repository_owner == 'intel' && 'intel-ubuntu-latest' || 'ubuntu-latest' }}
     needs: setup-matrix
-    if: ${{ fromJson(needs.setup-matrix.outputs.matrix).readmes != null && fromJson(needs.setup-matrix.outputs.matrix).readmes != [] }}
+    if: ${{ fromJson(needs.setup-matrix.outputs.matrix).readmes != null && fromJson(needs.setup-matrix.outputs.matrix).readmes != '[]' }}
     strategy:
       matrix: ${{ fromJson(needs.setup-matrix.outputs.matrix) }}
       fail-fast: false
