--- a/.github/workflows/dockerhub-description.yml
+++ b/.github/workflows/dockerhub-description.yml
@@ -46,7 +46,7 @@ jobs:
     runs-on: ${{ github.repository_owner == 'intel' && 'intel-ubuntu-latest' || 'ubuntu-latest' }}
     needs: setup-matrix
 #    if: ${{ fromJson(needs.setup-matrix.outputs.matrix).readmes && fromJson(needs.setup-matrix.outputs.matrix).readmes != '[]' }}
-    if: ${{ needs.setup-matrix.outputs.matrix != '{"readmes":[]}' }}
+    if: ${{ needs.setup-matrix.outputs.matrix }}
     strategy:
       matrix: ${{ fromJson(needs.setup-matrix.outputs.matrix) }}
       fail-fast: false
