--- a/.github/workflows/dockerhub-description.yml
+++ b/.github/workflows/dockerhub-description.yml
@@ -45,8 +45,7 @@ jobs:
   publish-dockerhub-description:
     runs-on: ${{ github.repository_owner == 'intel' && 'intel-ubuntu-latest' || 'ubuntu-latest' }}
     needs: setup-matrix
-#    if: ${{ fromJson(needs.setup-matrix.outputs.matrix).readmes && fromJson(needs.setup-matrix.outputs.matrix).readmes != '[]' }}
-    if: ${{ needs.setup-matrix.outputs.matrix }}
+    if: ${{ needs.setup-matrix.outputs.matrix != '{"readmes":[]}' }}
     strategy:
       matrix: ${{ fromJson(needs.setup-matrix.outputs.matrix) }}
       fail-fast: false
